@@ -45,7 +45,6 @@ Fournit les concepts et l'administration des modèles, actions, séquences, loca
         'rule.xml',
         'property.xml',
         'module/module.xml',
-        'default.xml',
         'trigger.xml',
         ],
     'translation': [
